<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainFragment">
    <ImageView
        android:id="@+id/wallpaperImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="60dp">

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_bold"
                android:text="@string/afroaroma"
                android:letterSpacing="0.2"
                android:textColor="#000000"
                android:textSize="40sp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_light"
                android:letterSpacing="0.1"
                android:textAlignment="center"
                android:text="GET A TASTE OF AFRICA"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:lineSpacingExtra="15dp"
                android:layout_marginTop="50dp"/>

            <Button
                android:id="@+id/btnSignUpPage"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/round_cream_button"
                android:fontFamily="@font/outfit_light"
                android:letterSpacing="0.15"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginTop="250dp"/>

            <Button
                android:id="@+id/btnLoginPage"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/round_dark_cream_button"
                android:fontFamily="@font/outfit_light"
                android:letterSpacing="0.15"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="2dp"/>
    </LinearLayout>

</FrameLayout>